--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <meta charset="utf-8">
+
+    <title>Агенство недвижимости</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/stylish-portfolio.css" rel="stylesheet">
@@ -19,7 +20,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.js"></script>
     <![endif]-->
 
-    <meta charset="utf-8">
+
 </head>
 
 <body>
@@ -30,22 +31,22 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location="#top"">Агентство
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#top'">Агентство</button>
             </li>
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location="#top"">Главная
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#top'">Главная</button>
             </li>
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">О нас
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">О нас</button>
             </li>
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">Услуги
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">Услуги</button>
             </li>
             <!-- <li>
                 <a href="#portfolio" onclick = $("#menu-close").click(); >Портфолио</a>
             </li> -->
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#contact'">Контакты
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#contact'">Контакты</button>
             </li>
         </ul>
     </nav>
@@ -56,7 +57,7 @@
             <div style="margin: 0; padding: 0; font-size: 4.5em; font-weight: 700;">Твой Дом</div>
             <div style="margin-top: 20;margin-bottom: 10;font-weight: 500; font-size: 24">Агентство недвижимости</div>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Узнать больше >></a>
+            <a href="#about" class="btn btn-dark btn-lg">Узнать больше</a>
         </div>
     </header>
 
@@ -151,13 +152,13 @@
         <div class="row text-center">
           <div class="col-lg-12">
             <div style="font-size: 30; margin-top: 40; margin-bottom: 20;">Наш офис</div>
-            <img src="img/office place.jpg" width="600" class="img-rounded center-block">
+            <img src="img/office_place.jpg" width="600" class="img-rounded center-block">
           </div>
         </div>
       </div>
     </section>
 
-
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script type="text/javascript">
       ymaps.ready(init);
       function init(){
@@ -166,7 +167,7 @@
                 zoom: 15
             });
         map.behaviors.disable('scrollZoom');
-        placemark = new ymaps.Placemark([55.740684, 37.618174], {
+        var placemark = new ymaps.Placemark([55.740684, 37.618174], {
           hintContent: 'Твой Дом',
           balloonContentHeader: 'Твой Дом',
           balloonContentBody: 'Москва, Старомонетный переулок, 10'
@@ -179,28 +180,31 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center" id="contact">
+                <div class="col-lg-10 col-lg-offset-1 text-center" id="contact-footer">
                     <h4><strong>Твой Дом</strong>
                     </h4>
                     <p>г. Москва<br>Старомонетный переулок, 10</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> +7 (999) 999-99-99</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">test@example.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i><a href="mailto:name@example.com">test@example.com</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://vk.com/"><i class="fa fa-vk fa-fw fa-3x"></a></i>
+                            <a href="https://vk.com/"><i class="fa fa-vk fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="http://example.com/"><i class="fa fa-link fa-fw fa-3x"></a></i>
+                            <a href="http://example.com/"><i class="fa fa-link fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
 
 
     <!-- Custom Theme JavaScript -->
