--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <link href="css/stylish-portfolio.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="css/fonts.min.css" rel="stylesheet" type="text/css">
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -153,8 +151,8 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <div style="font-size: 30; margin-top: 50; margin-bottom: 50;">
-              <h4>Наш офис</h4>
+            <div style="margin-top: 1cm; margin-bottom: 1cm;">
+              <h2>Наш офис</h2>
             </div>
             <img src="img/office_place.jpg" width="600" class="img-rounded center-block">
           </div>
@@ -195,53 +193,13 @@
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 
     <script type="text/javascript">
-      ymaps.ready(init);
-      function init(){
-        var map = new ymaps.Map("map", {
-                center: [55.740684, 37.618174],
-                zoom: 15
-            });
-        map.behaviors.disable('scrollZoom');
-        var placemark = new ymaps.Placemark([55.740684, 37.618174], {
-          hintContent: 'Твой Дом',
-          balloonContentHeader: 'Твой Дом',
-          balloonContentBody: 'Москва, Старомонетный переулок, 10'
-        });
-        map.geoObjects.add(placemark);
-      }
-      </script>
-
+      function init(){var a=new ymaps.Map("map",{center:[55.740684,37.618174],zoom:15});a.behaviors.disable("scrollZoom");var b=new ymaps.Placemark([55.740684,37.618174],{hintContent:"Твой Дом",balloonContentHeader:"Твой Дом",balloonContentBody:"Москва, Старомонетный переулок, 10"});a.geoObjects.add(b)}ymaps.ready(init);
+    </script>
 
     <!-- Custom Theme JavaScript -->
-    <script>
+    <script type="text/javascript">
     // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-
-    // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
-
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
+      $("#menu-close").click(function(a){a.preventDefault(),$("#sidebar-wrapper").toggleClass("active")}),$("#menu-toggle").click(function(a){a.preventDefault(),$("#sidebar-wrapper").toggleClass("active")}),$(function(){$("a[href*=#]:not([href=#])").click(function(){if(location.pathname.replace(/^\//,"")==this.pathname.replace(/^\//,"")||location.hostname==this.hostname){var a=$(this.hash);if(a=a.length?a:$("[name="+this.hash.slice(1)+"]"),a.length)return $("html,body").animate({scrollTop:a.offset().top},1e3),!1}})});
     </script>
 
 </body>
